# dikum

./: LICENSE  README.md  pyproject.toml
Documents/: ledger_design.md
ledgertool/: ledger.py  ledger_core.py
scripts/: bundle.py
tests/: test_ledger_core.py
