[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dikum-ledgertool"
version = "0.0.1"
requires-python = ">=3.10"

[project.optional-dependencies]
test = ["pytest"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
# E,F: pycodestyle/pyflakes, W: warnings, I: import順, B: bugbear（軽めのバグ検出）
select = ["E", "F", "W", "I", "B"]
ignore = []

[tool.ruff.isort]
known-first-party = ["ledgertool"]
